risteys: fix phenocode name overflowing in search

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -100,6 +100,10 @@
     display: grid;
     grid-template-columns: 250px auto;
 }
+.results .item > span:nth-child(1) {
+    @apply pr-2;
+    overflow-wrap: anywhere;
+}
 .results .item.selected {
     @apply bg-grey-light;
 }
